--- a/Design-Pattern/JavaFXQuizApp-DH23IT01/pom.xml
+++ b/Design-Pattern/JavaFXQuizApp-DH23IT01/pom.xml
@@ -16,6 +16,12 @@
             <version>13</version>
         </dependency>
         <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
